Fix announcement spacing

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -591,3 +591,8 @@ label.required:after {
 .t-perm-private {
   color: darkgoldenrod;
 }
+
+/* Announcements */
+.announcement-wrap > h4 {
+    margin: 0;
+}
